objects/MDPicklistValue__mdt.object
<CustomObject>
    <description>Masterdata picklivalue manager metadata</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The original code from master data </description>
        <inlineHelpText>The original code from master data </inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if the last successor is active it will be used in datafix </description>
        <label>IsLastSuccessorActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSuccessorParentCode__c</fullName>
        <description>Code of parent object </description>
        <label>LastSuccessorParentCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSuccessor__c</fullName>
        <description>The code of last successor that it is related to the original code.  </description>
        <label>LastSuccessor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MDPicklistValue</label>
    <pluralLabel>MDPicklistValues</pluralLabel>
</CustomObject>